--- a/weather_app/lib/l10n/intl_vi.arb
+++ b/weather_app/lib/l10n/intl_vi.arb
@@ -38,6 +38,7 @@
     "searchHint": "Nhập tên thành phố...",
     "cancel": "Hủy",
     "add": "Thêm",
+    "back": "Quay lại"
     "addedToFavorites": "{city} đã được thêm vào danh sách yêu thích",
     "high": "Cao",
     "low": "Thấp",
